@@ -1,0 +1,7 @@
+## $I$
+
+noinst_LTLIBRARIES = libdsplib.la
+
+libdsplib_la_SOURCES = dsplib.cpp
+libdsplib_la_CXXFLAGS = $(BM_CXXFLAGS)
+libdsplib_la_LDFLAGS = $(BM_LIBS)
